--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/organization_service
+spring.datasource.username=root
+spring.datasource.password=QuEST@123
 
+spring.jpa.hibernate.ddl-auto=update
+server.port=8083
