--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/organization_service
-spring.datasource.username=root
-spring.datasource.password=QuEST@123
+spring.application.name=ORGANIZATION-SERVICE
+spring.config.import=optional:configserver:http://localhost:8888
 
-spring.jpa.hibernate.ddl-auto=update
-server.port=8083
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+management.endpoints.web.exposure.include=*
+
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
